<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame"
    android:paddingStart="@dimen/_25sdp"
    android:paddingEnd="@dimen/_25sdp"
    android:paddingBottom="@dimen/_15sdp"
    tools:context=".Register_Activity">


    <LinearLayout
        android:id="@+id/registar_lay_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/TextInputLayoutfullname"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="@dimen/_2sdp"
            android:hint="@string/FullName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registar_et_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/registar_img_profile"
            android:layout_width="@dimen/_50sdp"
            android:layout_weight="1"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/ic_user_photo"
            app:civ_border_color="@color/beige"
            app:civ_border_width="@dimen/_1sdp" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutemail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:hint="@string/Email"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registar_lay_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registar_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutusrname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:ems="10"
        android:hint="@string/UserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutemail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registar_et_usrname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutusrname">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutusrnamepassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_122sdp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutemail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registar_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutusrnameRepassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_122sdp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/repassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutemail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registar_et_Repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Spinner
        android:id="@+id/registar_sp_country"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:entries="@array/Country"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/rwgister_lay_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registar_sp_country">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutbdate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/_14ssp"
            android:hint="@string/SelectBirthdate"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutemail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registar_et_bdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/registar_rg_gender"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rwgister_lay_date">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/registar_rb_male"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_weight="1"
            android:duplicateParentState="true"
            android:text="@string/Male"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/registar_rb_Female"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_weight="1"
            android:text="@string/Female"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registar_btn_save"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/background"
        android:text="@string/Save"
        android:textAllCaps="false"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registar_rg_gender"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>